# my-python-template

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/my_python_template/: __about__.py  __init__.py  config.py  sample.py
tests/: test_sample.py
