[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-python-template"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "JPFeng", email = "jpfeng-dev@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[tool.hatch.envs.default]
installer = "uv"

[project.urls]
Documentation = "https://github.com/JPFeng/my-python-template#readme"
Issues = "https://github.com/JPFeng/my-python-template/issues"
Source = "https://github.com/JPFeng/my-python-template"

[tool.hatch.version]
path = "src/my_python_template/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_python_template tests}"

[tool.coverage.run]
source_pkgs = ["my_python_template", "tests"]
branch = true
parallel = true
omit = [
  "src/my_python_template/__about__.py",
]

[tool.coverage.paths]
my_python_template = ["src/my_python_template", "*/my-python-template/src/my_python_template"]
tests = ["tests", "*/my-python-template/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
